# tg-dsc-analyzer

./: .gitignore  README.md  SKILL.md  pyproject.toml
examples/: demo_analysis.py
tests/: test_core.py
tgdsc/: __init__.py  comparison.py  deconvolution.py  dsc.py  export.py  io.py  kinetics.py  pools.py  preprocess.py  stability.py  tg.py  visualize.py
