[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-dsc-analyzer"
version = "0.4.0"
description = "TG-DSC thermal analysis toolkit for soil organic carbon stability characterization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "openpyxl>=3.1",
    "lmfit>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Middest/tg-dsc-analyzer"

[tool.setuptools.packages.find]
include = ["tgdsc*"]
